<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_admin">Quiz</string>
    <string name="title_activity_mainquiz">Quiz</string>
    <string name="Login">Login</string>
    <string name="Password_hint">Password</string>
    <string name="login_welcome">Welcome Admin! Please type your password to continue</string>
    <string name="title_activity_admin_home">Question</string>
    <string name="hello_admin">Please type in the question you want to add. Give the 4 choices and also the correct option.</string>
    <string name="chkA">A</string>
    <string name="chkB">B</string>
    <string name="chkC">C</string>
    <string name="chkD">D</string>
    <string name="optionA_hint">Option A</string>
    <string name="optionB_hint">Option B</string>
    <string name="optionC_hint">Option C</string>
    <string name="optionD_hint">Option D</string>
    <string name="question_hint">Type the new question here.</string>
    <string name="submit">Submit</string>
    <string name="populate">Populate</string>
    <string name="title_activity_admin_quest_confirm">Question Confirmation</string>
    <string name="admin_quest_confirm">Please confirm the question entered</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="title_activity_admin_login">Login for Admin</string>
    <string name="title_activity_admin_base">Admin Home</string>
    <string name="begin">Begin</string>
    <string name="admin_base_title">Hi Admin!!! What do you want to do?</string>
    <string name="admin_base_newq">Create A New Question</string>
    <string name="title_activity_admin_review">Question Bank Review</string>
    <string name="admin_review_title">Questions in the database are listed below:</string>
    <string name="admin_back">Back</string>
    <string name="admin_base_revw">Review All Questions</string>
    <string name="admin_quest_upd">Confirm</string>
    <string name="title_activity_admin_chkq">Question Review</string>
    <string name="admin_chkq_hint">See your question here</string>
    <string name="admin_chkq_title">Type the question no.</string>
    <string name="admin_base_chkq">Review A Question</string>
    <string name="title_activity_user_publish">Congrats!</string>
    <string name="user_ps_name">Name      :</string>
    <string name="user_ps_id">ID :</string>
    <string name="user_ps_publish">Return to Main Page</string>
    <string name="user_ps_score">Mark :</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="timer">Show Timer</string>
    <string name="mainquiz_next">Next</string>
    <string name="main_logo">Logo comes here</string>
    <string name="settings_name">Name</string>
    <string name="settings_id">ID</string>
    <string name="title_activity_user_landing">Quiz Details</string>
    <string name="user_lp_cont">Continue</string>
    <string name="user_lp_text">Press Continue to start the test</string>
    <string name="delete">Delete</string>
    <string name="admin_check">Check</string>
    <string name="admin_chkq_edh">Type the question no.</string>
    <string name="TextView">TextView</string>
    <string name="delete_all">Delete All</string>
    <string name="title_activity_admin_cp">Question Paper Details</string>
    <string name="admin_cp_instr">Hi. Please enter the quiz details to get started.</string>
    <string name="admin_cp_name">Quiz Name :</string>
    <string name="admin_cp_qn"># of Qs :</string>
    <string name="admin_cp_time">Duration :</string>
    <string name="admin_cp_deadl">Deadline :</string>
    <string name="admin_cp_syllabus">Syllabus :</string>
    <string name="admin_cp_date">Set Date</string>
    <string name="title_activity_user_base">User Home</string>
    <string name="title_activity_user_score">Scoresheet</string>
    <string name="title_activity_user_import">Import a Question paper</string>
    <string name="user_landing_take">Take a Quiz</string>
    <string name="user_landing_scr">View scores</string>
    <string name="user_landing_imp">Import A Question Paper</string>
    <string name="admin_base_export">Export the Quiz</string>
    <string name="clear">Clear</string>
    <string name="mainquiz_prev">Previous</string>
    <string name="title_activity_fullscreen">Image for the Quiz</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mainquiz_img">Image</string>
    <string name="title_activity_filepicker">Pick your Question Paper</string>
    <string name="title_activity_dblist">Question Bank @ Server</string>
    <string name="title_activity_edit_q">Edit a Question</string>
    <string name="edit">Edit</string>
    <string name="editqb">Edit Settings</string>
    <string name="title_activity_edit_qb">EditQBActivity</string>
    <string name="admin_base_delete">Delete the QB</string>
    <string name="admin_base_newdb">Create A New Question Paper</string>
    <string name="settings_url">Localhost URL</string>
    <string name="settings_gen">Get Password</string>
    <string name="settings_pass">Password</string>
    <string name="disablehttp">Disable HTTP</string>
    <string name="admin_update">Update</string>
    <string name="connecting">Connecting to the server</string>
    
</resources>
